Metodo de play al boton, opcion 1

--- a/index.html
+++ b/index.html
@@ -23,31 +23,20 @@
     </main>
 
     <script>
-      function MediaPlayer(config) {
-        this.media = config.el;
-      }
+      // A querySelector le paso la etiqueta "video" ya que es la unica etiqueta video
+      const video = document.querySelector("video")
+      // Lo mismo al boton solo hay 1, se lo paso a querySelector
+      const button = document.querySelector("button ")
+
+      function MediaPlayer() {}
 
       MediaPlayer.prototype.play = function() {
-        this.media.play();
-      };
+        video.play();
+      }
 
-      MediaPlayer.prototype.pause = function() {
-        this.media.pause();
-      };
-
-      MediaPlayer.prototype.togglePlay = function() {
-        if (this.media.paused) {
-          this.play();
-        } else {
-          this.pause();
-        }
-      };
-
-      const video = document.querySelector('video');
-      const player = new MediaPlayer({ el: video });
-
-      const button = document.querySelector('button');
-      button.onclick = () => player.togglePlay();
+      const player = new MediaPlayer();
+      button.onclick = () => video.play();
+      // el metodo .play esta disponible segun la API del DOM: https://developer.mozilla.org/es/docs/Web/API/HTMLMediaElement
     </script>
   </body>
 </html>
