Fix - Se edita el codigo para que sea reutilizable

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       }
 
       const player = new MediaPlayer({ el: video });
-      button.onclick = () => video.play();
+      button.onclick = () => player.play();
       // el metodo .play esta disponible segun la API del DOM: https://developer.mozilla.org/es/docs/Web/API/HTMLMediaElement
     </script>
   </body>
