Se agregaron ejercicios, descripcion de los Scopes y Closures, el proyecto principal cambio a Module Scope

--- a/index.html
+++ b/index.html
@@ -22,36 +22,6 @@
       <button>Play/Pause</button>
     </main>
 
-    <script>
-      // A querySelector le paso la etiqueta "video" ya que es la unica etiqueta video
-      const video = document.querySelector("video")
-      // Lo mismo al boton solo hay 1, se lo paso a querySelector
-      const button = document.querySelector("button ")
-
-      function MediaPlayer(config) {
-        this.media = config.el
-      }
-
-      MediaPlayer.prototype.play = function() {
-        this.media.play();
-      }
-
-
-      MediaPlayer.prototype.pause = function () {
-        this.media.pause();
-      }
-
-      MediaPlayer.prototype.togglePlay = function () {
-        if (this.media.paused) {
-          this.play();
-        } else {
-          this.pause();
-        }
-      };
-
-      const player = new MediaPlayer({ el: video });
-      button.onclick = () => player.togglePlay();
-      // el metodo .play esta disponible segun la API del DOM: https://developer.mozilla.org/es/docs/Web/API/HTMLMediaElement
-    </script>
+    <script type="module" src="/assets/index.js"></script>
   </body>
 </html>
