--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -10,6 +10,9 @@
     <ol>
         <li><a href="/ejercicios/scope.html">Scope</a></li>
         <li><a href="/ejercicios/closures.html">Closures</a></li>
+        <li><a href="/ejercicios/this.html">this</a></li>
+        <li><a href="/ejercicios/call-apply-bind.html">call, apply y bind</a></li>
+        <li><a href="/ejercicios/prototype.html">Prototype</a></li>
     </ol>
 </body>
 </html>
