--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -12,7 +12,9 @@
         <li><a href="/ejercicios/closures.html">Closures</a></li>
         <li><a href="/ejercicios/this.html">this</a></li>
         <li><a href="/ejercicios/call-apply-bind.html">call, apply y bind</a></li>
-        <li><a href="/ejercicios/prototype.html">Prototype</a></li>
+        <li><a href="/ejercicios/prototype.html">Prototype</a></li> prototyphal-inhreritance
+        <li><a href="/ejercicios/prototyphal-inhreritance.html">Herencia Prototipal (prototyphal inhreritance)</a></li>
+        <li><a href="/ejercicios/promises.html">Promesas</a></li>
     </ol>
 </body>
 </html>
