Proxy, generators y fetch

--- a/ejercicios/index.html
+++ b/ejercicios/index.html
@@ -15,6 +15,9 @@
         <li><a href="/ejercicios/prototype.html">Prototype</a></li> prototyphal-inhreritance
         <li><a href="/ejercicios/prototyphal-inhreritance.html">Herencia Prototipal (prototyphal inhreritance)</a></li>
         <li><a href="/ejercicios/promises.html">Promesas</a></li>
+        <li><a href="/ejercicios/generators.html">Generadores</a></li>
+        <li><a href="/ejercicios/proxy.html">Proxy</a></li>
+        <li><a href="/ejercicios/abort-fetch.html">Fetch</a></li>
     </ol>
 </body>
 </html>
