Se agrega funcionalidad IntersectionObserver

--- a/index.html
+++ b/index.html
@@ -23,6 +23,25 @@
       <button id="unmuteMute">Mute/Unmute</button>
     </main>
 
+    <ul>
+      <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt optio sed neque, asperiores nam cum omnis voluptatibus vero qui repellendus possimus! Voluptate veritatis blanditiis libero obcaecati, esse ex reiciendis aperiam.</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga a, mollitia maiores facilis dicta quam nisi molestiae sint eaque id esse nesciunt deleniti maxime ut repellendus possimus eveniet sed impedit!</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. A corporis iste consectetur asperiores quis fuga magnam ea tempore minima quod officiis, totam incidunt temporibus facilis eligendi est impedit aut similique?</li>
+      <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eum eos ea at eius excepturi, laborum doloribus id autem qui ipsum maiores eaque alias saepe vitae, quia consectetur quidem omnis!</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus officiis molestias quod ipsum accusamus perferendis esse iusto nemo architecto, hic, et ducimus, provident exercitationem soluta id alias fugiat tempore delectus?</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda itaque mollitia qui minus dolorum harum? Facilis adipisci architecto aliquid distinctio nihil, voluptas quo eum quas cumque quam aperiam ducimus fuga?</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis cupiditate ab voluptatibus, obcaecati debitis non, nam provident reiciendis exercitationem sint sequi? Quam magni numquam fugiat aliquid earum odit tempora ex!</li>
+      <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora corporis repudiandae nihil laudantium iure officia quo perspiciatis voluptate dicta veniam illum, quis quasi itaque odit inventore! Eos, doloribus itaque? Blanditiis.</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus incidunt, iusto, obcaecati aliquam repellendus natus fuga distinctio necessitatibus perferendis, debitis possimus aspernatur! Pariatur, alias quae animi laboriosam nulla molestiae officia?</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae nisi soluta distinctio enim eligendi qui, reprehenderit harum obcaecati veniam ea sequi optio repellendus quas ab doloribus id dolorem atque? Architecto!</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius corrupti, perferendis consequatur fuga ipsum nostrum quia tempora quam itaque quas. Laborum similique voluptatem repudiandae reiciendis voluptate corporis libero a numquam?</li>
+      <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum laborum optio totam necessitatibus, esse provident error repellendus quidem sapiente ipsum obcaecati similique suscipit voluptate labore neque id ex ad impedit.</li>
+      <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt optio sed neque, asperiores nam cum omnisvoluptatibus vero qui repellendus possimus! Voluptate veritatis blanditiis libero obcaecati, esse ex reiciendis aperiam.</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga a, mollitia maiores facilis dicta quam nisi molestiae sint eaque id esse nesciunt deleniti maxime ut repellendus possimus eveniet sed impedit!</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. A corporis iste consectetur asperiores quis fuga magnam ea tempore minima quod officiis, totam incidunt temporibus facilis eligendi est impedit aut similique?</li>
+      <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eum eos ea at eius excepturi, laborum doloribus id autem qui ipsum maiores eaque alias saepe vitae, quia consectetur quidem omnis!</li>
+    </ul>
+
     <script type="module" src="/assets/index.js"></script>
   </body>
 </html>
