Se convierte el proyecto a TypeScript

--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
       <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eum eos ea at eius excepturi, laborum doloribus id autem qui ipsum maiores eaque alias saepe vitae, quia consectetur quidem omnis!</li>
     </ul>
 
-    <script type="module" src="/assets/index.js"></script>
+    <script type="module" src="/assets/index.ts"></script>
   </body>
 </html>
